--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/bobbyquennell/react-starter-kit#readme",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.2.0"
   }
